@@ -19,6 +19,16 @@ jobs:
         cip:
           - tag: "5.37"
           - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=warn
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=encrypt
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest_or_encrypt
+          - tag: "5.36"
+            env: ALIEN_DOWNLOAD_RULE=digest_and_encrypt
+          - tag: "5.36"
           - tag: "5.34"
           - tag: "5.32"
           - tag: "5.30"
@@ -36,6 +46,7 @@ jobs:
 
     env:
       CIP_TAG: ${{ matrix.cip.tag }}
+      CIP_ENV: ${{ matrix.cip.env }}
 
 
     steps:
